# factor-momentum

./: .gitignore  1_compute_alphas.py  2_backtest.py  3_backtest_optimal.py  3_evaluate_lambdas.py  3_visualize.py  4_visualize.py  README.md  _baseline.py  benchmark_optimizer.py  check_data_alignment.py  clean.py  config.py  implementation_plan.md  nohup.out  pipeline.py  pyproject.toml  temp_check_nulls.py  test_alignment.py  visualizer_plan.md
results/: benchmark_results.txt
results/full/: backtest_report_all.txt
results/test/: backtest_report_all.txt  backtest_report_factor_momentum_lambda_0.003667.txt  lambda_evaluation_report.txt
results/train/: backtest_report_factor_momentum_lambda_0.003667.txt  dynamic_optimal_report.txt  lambda_evaluation_report.txt
