[project]
name = "momentum"
version = "0.1.0"
description = "Industry and style momentum"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cupy-cuda12x>=13.6.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.2",
    "pyarrow>=23.0.0",
    "sf-quant==0.1.23",
    "sf-backtester",
    "polars",
]

[tool.uv.sources]
sf-quant = { path = "../sf-quant", editable = true }
